--- a/.github/workflows/publish-spec-puppeteer.yml
+++ b/.github/workflows/publish-spec-puppeteer.yml
@@ -1,4 +1,4 @@
-name: Publish spec-selenium
+name: Publish spec-puppeteer
 
 on:
   workflow_dispatch:
@@ -17,19 +17,12 @@ on:
         default: patch
         required: false
     secrets:
-      SAUCE_USERNAME:
-        required: true
-      SAUCE_ACCESS_KEY:
-        required: true
       NPM_TOKEN:
         required: true
 env:
-  PACKAGE_DIR: spec-driver-selenium
+  PACKAGE_DIR: spec-driver-puppeteer
   FORCE_COLOR: 3
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-  CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
-  SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
-  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
 jobs:
   verify:
     name: Verification
@@ -52,12 +45,9 @@ jobs:
     needs: [verify]
     strategy:
       matrix:
-        framework-version: [3, 4]
         node-version: [12, 14, 16]
-    name: 'Test (selenium: ${{matrix.framework-version}}, node: ${{matrix.node-version}})'
+    name: 'Test (node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
-    env:
-      APPLITOOLS_SELENIUM_MAJOR_VERSION: ${{matrix.framework-version}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v2
