--- a/.github/workflows/publish-nightwatch.yml
+++ b/.github/workflows/publish-nightwatch.yml
@@ -1,4 +1,4 @@
-name: Publish wdio
+name: Publish nightwatch
 
 on:
   workflow_dispatch:
@@ -23,6 +23,8 @@ on:
         type: boolean
         default: false
     secrets:
+      NPM_TOKEN:
+        required: true
       CVG_TESTS_EG_REMOTE:
         required: true
       APPLITOOLS_API_KEY:
@@ -35,13 +37,12 @@ on:
         required: true
       SAUCE_ACCESS_KEY:
         required: true
-      NPM_TOKEN:
-        required: true
       AZURE_STORAGE_CONNECTION_STRING:
         required: true
 env:
-  PACKAGE_DIR: eyes-webdriverio-5
+  PACKAGE_DIR: eyes-nightwatch
   FORCE_COLOR: 3
+  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
   CVG_TESTS_EG_REMOTE: ${{secrets.CVG_TESTS_EG_REMOTE}}
   APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
@@ -49,33 +50,45 @@ env:
   APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
   SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
   SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
-  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
 jobs:
-  prepare:
-    name: Prepare
+  verify:
+    name: Verification
     runs-on: ubuntu-latest
     outputs:
       environments: ${{steps.prepare.outputs.environments}}
     steps:
-      - id: prepare
+      - name: Check-out repository
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: lts/*
+          registry-url: https://registry.npmjs.org
+      - name: Run pre-publish verifications
+        shell: bash
+        working-directory: ./packages/${{env.PACKAGE_DIR}}
+        run: |
+          yarn install
+          npx bongo release-pre-check --skip-deps --skip-commit --skip-verify-installed-versions
+      - name: Prepare environments
+        id: prepare
+        shell: bash
         run: |
           if [ ${{inputs.multienv || github.event.inputs.multienv}} = true ]
           then
-            echo "::set-output name=environments::[{\"framework-version\":7,\"node-version\":16}, {\"framework-version\":6,\"node-version\":16}, {\"framework-version\":5,\"node-version\":16}, {\"framework-version\":7,\"node-version\":14}, {\"framework-version\":7,\"node-version\":12}]"
+            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"node-version\":12}]"
           else
-            echo "::set-output name=environments::[{\"framework-version\":7,\"node-version\":16}]"
+            echo "::set-output name=environments::[{\"node-version\":16}]"
           fi
   test:
-    needs: [prepare]
+    needs: [verify]
     strategy:
       max-parallel: 3
       matrix:
-        include: ${{fromJSON(needs.prepare.outputs.environments)}}
-    name: 'Test (wdio: ${{matrix.framework-version}}, node: ${{matrix.node-version}})'
+        include: ${{fromJSON(needs.verify.outputs.environments)}}
+    name: 'Test (node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
-    env:
-      APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION: ${{matrix.framework-version}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v2
@@ -83,6 +96,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{matrix.node-version}}
+          registry-url: https://registry.npmjs.org
       - name: Run tests
         uses: ./.github/actions/tests
         with:
@@ -90,7 +104,7 @@ jobs:
       - name: Upload testing artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: wdio-test-results-framework-${{matrix.framework-version}}-node-${{matrix.node-version}}
+          name: nightwatch-test-results-node-${{matrix.node-version}}
           retention-days: 2
           path: |
             packages/${{env.PACKAGE_DIR}}/coverage-tests-metadata.json
@@ -106,10 +120,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: lts/*
+          registry-url: https://registry.npmjs.org
       - name: Download testing artifacts
         uses: actions/download-artifact@v2
         with:
-          name: wdio-test-results-framework-7-node-16
+          name: nightwatch-test-results-node-16
           path: packages/${{env.PACKAGE_DIR}}
       - name: Publish to NPM
         uses: ./.github/actions/publish
