--- a/.github/workflows/publish-webdriverio.yml
+++ b/.github/workflows/publish-webdriverio.yml
@@ -1,4 +1,4 @@
-name: Publish testcafe
+name: Publish webdriverio
 
 on:
   workflow_dispatch:
@@ -25,21 +25,31 @@ on:
     secrets:
       NPM_TOKEN:
         required: true
+      CVG_TESTS_EG_REMOTE:
+        required: true
       APPLITOOLS_API_KEY:
         required: true
       APPLITOOLS_API_KEY_SDK:
         required: true
       APPLITOOLS_API_KEY_READ:
         required: true
+      SAUCE_USERNAME:
+        required: true
+      SAUCE_ACCESS_KEY:
+        required: true
       AZURE_STORAGE_CONNECTION_STRING:
         required: true
 env:
-  PACKAGE_DIR: eyes-testcafe
+  PACKAGE_DIR: eyes-webdriverio-5
   FORCE_COLOR: 3
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+  CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
+  CVG_TESTS_EG_REMOTE: ${{secrets.CVG_TESTS_EG_REMOTE}}
   APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
   APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
   APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
+  SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
+  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
   AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
 jobs:
   verify:
@@ -67,9 +77,9 @@ jobs:
         run: |
           if [ ${{inputs.multienv || github.event.inputs.multienv}} = true ]
           then
-            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"node-version\":12}]"
+            echo "::set-output name=environments::[{\"framework-version\":7,\"node-version\":16}, {\"framework-version\":6,\"node-version\":16}, {\"framework-version\":5,\"node-version\":16}, {\"framework-version\":7,\"node-version\":14}, {\"framework-version\":7,\"node-version\":12}]"
           else
-            echo "::set-output name=environments::[{\"node-version\":16}]"
+            echo "::set-output name=environments::[{\"framework-version\":7,\"node-version\":16}]"
           fi
   test:
     needs: [verify]
@@ -77,8 +87,10 @@ jobs:
       max-parallel: 3
       matrix:
         include: ${{fromJSON(needs.verify.outputs.environments)}}
-    name: 'Test (node: ${{matrix.node-version}})'
+    name: 'Test (wdio: ${{matrix.framework-version}}, node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
+    env:
+      APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION: ${{matrix.framework-version}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v2
@@ -94,7 +106,7 @@ jobs:
       - name: Upload testing artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: testcafe-test-results-node-${{matrix.node-version}}
+          name: wdio-test-results-framework-${{matrix.framework-version}}-node-${{matrix.node-version}}
           retention-days: 2
           path: |
             packages/${{env.PACKAGE_DIR}}/coverage-tests-metadata.json
@@ -114,7 +126,7 @@ jobs:
       - name: Download testing artifacts
         uses: actions/download-artifact@v2
         with:
-          name: testcafe-test-results-node-16
+          name: wdio-test-results-framework-7-node-16
           path: packages/${{env.PACKAGE_DIR}}
       - name: Publish to NPM
         uses: ./.github/actions/publish
